made elementary navigation

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -33,7 +33,8 @@ img{vertical-align: top;}
 
 #root{
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App {
@@ -67,4 +68,15 @@ img{vertical-align: top;}
   opacity: 0;
   transition: all 200ms ease-in;
   transform: translateX(-350px);
+}
+.navBar{
+  height: 50px;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  padding: 0 15px;
+  background: lightgray;
+}
+.navBar__links{
+  margin-left: auto;
 }
