--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -30,6 +30,9 @@ a:hover{text-decoration: none;}
 ul li{list-style: none;}
 img{vertical-align: top;}
 /* h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight: 400;} */
+body{
+  background-color:#d3ffff
+}
 
 #root{
   display: flex;
@@ -78,8 +81,41 @@ img{vertical-align: top;}
   display: flex;
   align-items: center;
   padding: 0 15px;
-  background: lightgray;
+  background: #8de7e7;
+  margin-bottom: 15px;
 }
 .navBar__links{
   margin-left: auto;
+}
+.navBar__links a {
+  margin-right: 10px;
+  color:teal;
+  position: relative;
+}
+.navBar__links a::after {
+  opacity: 0;
+  content: '';
+  display: inline-block;
+  width: 10px;
+  height: 2px;
+  background-color: teal;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  transition: all 500ms;
+}
+.navBar__links a:hover:after {
+  opacity: 1;
+  content: '';
+  display: inline-block;
+  width: 100%;
+  height: 2px;
+  background-color: teal;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
